--- a/src/ui/css/all.css
+++ b/src/ui/css/all.css
@@ -4284,3 +4284,11 @@ readers do not read off random characters that represent icons */
 .fas {
   font-family: 'Font Awesome 5 Free';
   font-weight: 900; }
+
+.dt-center {
+  text-align: center;
+}
+
+.bg-pos {
+  background-color: #566573;
+}
